# rktri

./: .gitignore  CLAUDE.md  Cargo.toml  REALISTIC_FOREST_WORLD.md
benches/: streaming.rs
crates/rktri-debug/: Cargo.toml
crates/rktri-mcp/: Cargo.toml
docs/: layer-limits-performance.md  layer-masking-implementation.md  layer-masking-plan.md  multi-layer-architecture.md
shaders/: clouds.wgsl  depth_normalize.wgsl  display.wgsl  godrays.wgsl  lighting.wgsl  shadow.wgsl  skybox.wgsl  svo_trace.wgsl  tonemap.wgsl  water_lighting.wgsl  water_trace.wgsl
shaders/common/: animation.wgsl  pbr.wgsl  types.wgsl
src/: lib.rs  main.rs
src/animation/: animator.rs  clip.rs  gpu_animation.rs  mod.rs  skeleton.rs
src/atmosphere/: color_ramp.rs  config.rs  fog.rs  mod.rs  moon.rs  state.rs  sun.rs  time.rs  weather.rs
src/clutter/: config.rs  library.rs  mod.rs  params.rs  profile.rs
src/core/: camera.rs  camera_controller.rs  error.rs  input.rs  logging.rs  mod.rs  time.rs  types.rs
src/entity/: mod.rs
src/ffi/: mod.rs
src/generation/: biome_gen.rs  clutter_gen.rs  clutter_to_layer.rs  config.rs  grass_gen.rs  mod.rs  rock_gen.rs  terrain_gen.rs  tree_gen.rs  voxel_classifiers.rs
src/grass/: config.rs  mod.rs  params.rs  profile.rs
src/mask/: builder.rs  mod.rs  octree.rs
src/math/: aabb.rs  frustum.rs  mod.rs  morton.rs  ray.rs
src/render/: context.rs  culling.rs  mod.rs  profiler.rs  window.rs
src/scene/: config.rs  flatten.rs  graph.rs  manager.rs  mod.rs  node.rs
src/streaming/: budget.rs  cache.rs  chunk_loader.rs  disk_io.rs  lod.rs  mod.rs  priority.rs
src/terrain/: biome.rs  generator.rs  mod.rs
src/voxel/: brick.rs  brick_handle.rs  chunk.rs  chunk_handle.rs  hierarchy.rs  instancing.rs  mod.rs  rock_library.rs  (+8 more)
(+65 files in other folders)
