[workspace]
members = [".", "crates/rktri-debug", "crates/rktri-mcp"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "sync", "macros", "time"] }

[package]
name = "rktri"
version = "0.1.0"
edition = "2024"
description = "A voxel-based 3D game engine"
license = "MIT"

[dependencies]
# Graphics
wgpu = "28"
winit = "0.30"

# Math
glam = { version = "0.29", features = ["bytemuck"] }

# Async runtime
tokio = { workspace = true }

# Serialization
rkyv = "0.8"
bytemuck = { version = "1", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Compression
lz4_flex = "0.11"

# ECS
hecs = "0.10"

# Procedural generation
noise = "0.9"

# Logging
log = { workspace = true }
env_logger = "0.11"

# Error handling
thiserror = { workspace = true }

# Utilities
pollster = "0.4"
image = "0.25"
rayon = "1.10"

# Debug tools
rktri-debug = { path = "crates/rktri-debug" }

# Screenshot support
half = "2"
base64 = "0.22"

# DLSS support (optional - requires NVIDIA DLSS SDK)
dlss_wgpu = { path = "dlss_wgpu_local", optional = true }
uuid = { version = "1", optional = true }

[features]
default = []
dlss = ["dep:dlss_wgpu", "dep:uuid"]

[[bin]]
name = "generate_world"
path = "src/bin/generate_world.rs"

[[bin]]
name = "generate_trees"
path = "src/bin/generate_trees.rs"

[[bench]]
name = "streaming"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
